# kaggle-challenges

./: .gitignore  pyproject.toml  titanic-survival.ipynb
ames-house-prices/: README.md  main.py  submission.csv
diamonds/: main.py
spaceship-titanic/: README.md  baseline-simple.py  baseline_submission.csv  spaceship-titanic-eda-fe-nb.py  spaceship-titanic-modeling-nb.py
spaceship-titanic/data/: cleaned-data.csv  sample_submission.csv
titanic-survival/: README.md  main.py  titanic-eda-fe-nb.py  titanic-modeling-nb.py
