[tool.poetry]
name = "kaggle-challenges"
version = "0.1.0"
description = ""
authors = ["Pedro P Camellon <pedropcamellon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
