[project]
name = "kaggle-challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "eli5>=0.16.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
